# VectraBank-AgenticRAG-for-Banking

./: .env.example  .gitignore  README.md  REFLECTION_REPORT.md  main.py  main_starter.py  pyproject.toml  rag_utils.py  requirements.txt
banking_documents/: customer_support_protocols.md  document_registry.json  fraud_detection_policy_v2.md  loan_eligibility_framework.md  risk_assessment_framework.md  transaction_monitoring_guide.md
chroma_db_banking/: chroma.sqlite3
