[project]
name = "vectrabank-agenticrag-for-banking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.4.1",
    "pyodbc>=5.3.0",
    "python-docx>=1.2.0",
    "PyPDF2>=3.0.0",
    "python-dotenv>=1.0.0",
    "semantic-kernel>=1.36.0",
]
